<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>techman_robot_msgs</name>
  <version>1.0.0</version>
  <description>techman robot msgs</description>
  <maintainer email="leo.wu@tm-robot.com">leowu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>action_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>action_msgs</exec_depend>
	<exec_depend>trajectory_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>


  <!-- <depend>action_msgs</depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

